# fast-api-react-admin-demo

./: .gitignore  README.md  docker-compose-staging.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: conftest.py  initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2022-09-14_91979b40eb38_create_users_table.py  2022-09-14_9e451ccd8974_add_item_table.py  2022-09-20_9e451ccd8974_add_item_table.py
backend/app/api/api_v1/routers/: auth.py  items.py  users.py
backend/app/api/api_v1/routers/tests/: test_items.py  test_users.py
backend/app/core/: auth.py  config.py  security.py
backend/app/data/: session.py
backend/app/data/models/: __init__.py  item_models.py  token_models.py  user_models.py
backend/app/data/repositories/: item_repository.py  user_repository.py
backend/app/tests/: test_main.py
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json
frontend/src/: Routes.tsx
frontend/src/admin/: Admin.tsx  authProvider.ts
frontend/src/admin/Items/: ItemCreate.tsx  ItemEdit.tsx  ItemList.tsx  ItemShow.tsx  ItemSummary.tsx  index.ts
frontend/src/config/: index.tsx
frontend/src/utils/: api.ts
frontend/src/views/: Home.tsx  Login.tsx  SignUp.tsx  index.ts
nginx/: nginx.conf
scripts/: build.sh  build_staging.sh
