[tool.poetry]
name = "brit-backend"
version = "0.1.0"
description = ""
authors = ["withakay <jack@fader.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
Authlib = "^1.1.0"
fastapi = "httpx"
httpx = "^0.23.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.41"
uvicorn = "^0.18.3"
passlib = "^1.7.4"
SQLAlchemy-Utils = "^0.38.3"
python-multipart = "^0.0.5"
PyJWT = "^2.4.0"
bcrypt = "^4.0.0"
requests = "^2.28.1"
pytest = "^7.1.3"
ipython = "^8.5.0"
python-dateutil = "^2.8.2"
black = "^22.8.0"
isort = "^5.10.1"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipython = "^8.5.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
